[package]
name = "seccomp-sys"
version = "0.1.2"
authors = ["Alexander Polakov <apolyakov@beget.ru>"]
license = "LGPL-2.1"
keywords = ["linux", "seccomp"]
description = "low-level bindings to libseccomp"
repository = "https://github.com/polachok/seccomp-sys"
readme = "README.md"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "^0.3.9"
curl = "^0.4.8"
gcc = "0.3"
